--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
   table_calendar: ^3.0.0
-  fl_chart: ^0.60.0
-  video_player:
+  video_player: ^2.2.19
+  fl_chart:
+  syncfusion_flutter_charts:
+  charts_flutter: ^0.12.0
+  flutter_chart:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/ani.gif
+    - assets/images/leonui.jpg
     - assets/videos/sample.mp4
   #   - images/a_dot_ham.jpeg
 
